# whatsappCommerce

./: .env.hermes.example  .gitignore  DEPLOYMENT.md  apply_new_tables.mjs  docker-compose.yml  drizzle.config.ts  env.example.txt  go.work  go.work.sum  medusa-setup.md  migrate_r11.ts  package.json  pnpm-lock.yaml  template.json  todo.md  vitest.config.ts
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
ai-agent/: Dockerfile  config.py  requirements.txt
ai-agent/agents/: orchestrator.py
ai-agent/api/: main.py
ai-agent/guardrails/: guardrails.py
ai-agent/hermes_skills/: Dockerfile  __init__.py  app.py  models.py  po_generator.py  requirements.txt  supplier_email.py  woocommerce_sync.py
ai-agent/memory/: conversation_memory.py
ai-agent/tools/: commerce_tools.py  openappsec_config.py  opensearch_indexer.py  permify_client.py
client/: index.html
client/public/: manifest.json  offline.html
client/src/: App.tsx  index.css  main.tsx
client/src/components/: ConversationTimeline.tsx  DashboardLayout.tsx  EscrowTimeline.tsx  NotificationCenter.tsx  SlaCountdown.tsx  TenantPortalLayout.tsx
client/src/contexts/: TenantContext.tsx
client/src/hooks/: useConversationsWS.ts
client/src/pages/: AgentArchitecture.tsx  AgentConsole.tsx  AlertRules.tsx  AnalyticsBIDashboard.tsx  Home.tsx  (+57 more)
docs/: caddy-integration-analysis.md  caddy-keycloak-integration-analysis.md  fluvio-topic-mapping.md
drizzle/: 0000_abnormal_microchip.sql  0001_dazzling_santa_claus.sql  0001_lowly_corsair.sql  0002_cynical_jack_murdock.sql  0002_violet_gideon.sql  0003_panoramic_robin_chapel.sql  0004_unknown_dark_beast.sql  0005_huge_the_executioner.sql  0006_fuzzy_prodigy.sql  0007_special_hellcat.sql  0008_cold_mimic.sql  0009_fresh_mongoose.sql  0010_glorious_kinsey_walden.sql  0011_tan_starjammers.sql  0012_classy_spacker_dave.sql  0013_slippery_masque.sql  0014_acoustic_sway.sql  0015_right_valeria_richards.sql  0016_clean_thanos.sql  0017_yummy_corsair.sql  0018_certain_quentin_quire.sql  0019_unusual_chat.sql  0020_bumpy_sister_grimm.sql  0021_fair_dazzler.sql  0022_empty_quasimodo.sql  0023_snapshot.json  0023_user_whatsapp_notif_prefs.sql  0024_misty_living_lightning.sql  0025_new_prodigy.sql  0026_marvelous_deathbird.sql  schema.ts
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  0008_snapshot.json  0009_snapshot.json  0010_snapshot.json  0011_snapshot.json  0012_snapshot.json  0013_snapshot.json  0014_snapshot.json  0015_snapshot.json  0016_snapshot.json  0017_snapshot.json  0018_snapshot.json  0019_snapshot.json  0020_snapshot.json  0021_snapshot.json  0022_snapshot.json  0024_snapshot.json  0025_snapshot.json  0026_snapshot.json  _journal.json
k8s/: ai-agent.yaml  api-gateway.yaml  configmap.yaml  namespace.yaml  network-policy.yaml
rust/: Cargo.toml
rust/event-processor/: Cargo.toml  Dockerfile
rust/event-processor/src/: main.rs
rust/hermes-router/: Cargo.toml  Dockerfile
rust/hermes-router/src/: main.rs
rust/ledger-bridge/: Cargo.toml  Dockerfile
rust/ledger-bridge/src/: main.rs
rust/recon-worker/: Cargo.toml  Dockerfile
rust/recon-worker/src/: main.rs
scripts/: migrate_r30.mjs  migrate_r30.ts  seed.sql
server/: dapr.ts  db.mock.test.ts  db.ts  enhancements.test.ts  escrow.test.ts  features.test.ts  kafka.ts  logistics.test.ts  mlops.reconciliation.keycloak.test.ts  opensearch.ts  permify.ts  phoneAuth.integration.test.ts  platform.test.ts  postgres.connection.test.ts  quickReplyTemplates.test.ts  redis.ts  routers.ts  smoke.test.ts  stakeholder.smoke.test.ts  storage.ts  whatsappNotifications.test.ts
server/_core/: auth.ts  dataApi.ts  env.ts  heartbeat.ts  imageGeneration.ts  index.ts  llm.ts  map.ts  notification.ts  oauth.ts  sdk.ts  storageProxy.ts  trpc.ts  voiceTranscription.ts
server/routers/: agent.ts  alertRules.ts  analytics.ts  analyticsBI.ts  b2b.ts  broadcast.ts  broadcastAb.ts  channels.ts  cogsDispute.ts  compliance.ts  conversation.ts  deliveryReceipts.ts  escrow.ts  evidencePortal.ts  fineTune.ts  heartbeat.ts  hermes.ts  infra.ts  inventory.ts  invoice.ts  keycloak.ts  kyc.ts  labelStudio.ts  logistics.ts  marketplace.ts  medusa.ts  medusaOnboarding.ts  menu.ts  mlOps.ts  mobileMoney.ts  nlp.ts  notifications.ts  odoo.ts  odooMedusaBridge.ts  onboarding.ts  onboardingProgress.ts  operatorTemplates.ts  order.ts  orderCrud.ts  payment.ts  (+26 more)
server/services/: integrationSync.ts  medusaAdapter.ts
services/caddy-edge/: Caddyfile  Dockerfile  README.md  docker-compose.yml
services/commerce-engine/: Dockerfile  go.mod
services/conversation-orchestrator/: Dockerfile  go.mod
services/crm-adapter/: go.mod
services/dapr/: config.yaml
services/erp-adapter/: go.mod
services/event-gateway/: Dockerfile  go.mod  main.go
services/fluvio-consumer/: Cargo.toml  Dockerfile
services/fluvio-consumer/src/: main.rs
services/fluvio-consumer/src/smartmodule/: filter.rs
services/gateway/: Dockerfile  go.mod
services/hermes-bridge/: Dockerfile  go.mod  main.go
services/keycloak/: Dockerfile  README.md  docker-compose.yml
services/kyc-verifier/: Dockerfile  README.md  docker-compose.yml  requirements.txt
services/ledger-bridge/: Cargo.toml  Dockerfile
services/ledger-bridge/src/: main.rs
services/message-processor/: Cargo.toml  Dockerfile
services/message-processor/src/: main.rs
services/middleware/: README.md  docker-compose.middleware.yml  openappsec-policy.yaml  permify-schema.perm
services/ml-stack/: README.md  docker-compose.mlops.yml  ray_train_config.py
services/mojaloop/: fspiop_adapter.ts
services/notification-service/: go.mod
services/payment-orchestrator/: Dockerfile  go.mod
services/temporal-workflows/: workflows.ts
services/visual-inventory/: README.md  docker-compose.yml
services/visual-inventory/rust-bbox/: Cargo.toml  Dockerfile
services/visual-inventory/rust-bbox/src/: main.rs
services/webhook-ingestor/: Dockerfile  go.mod  go.sum
shared/types/: domain.go
(+471 files in other folders)
