[package]
name = "hermes-router"
version = "0.1.0"
edition = "2021"
description = "High-throughput Hermes event router with circuit breaker and retry"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
uuid = { version = "1.10", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-retry = "0.3"
dashmap = "6.1"
async-trait = "0.1"
thiserror = "1.0"
