[package]
name = "recon-worker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "recon-worker"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
thiserror = "1"
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4"] }
deadpool-postgres = "0.14"
config = "0.14"
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.6", features = ["trace"] }
csv = "1"
