[package]
name = "message-processor"
version = "1.0.0"
edition = "2021"
description = "High-performance Kafka message processor for WhatsApp Commerce"

[[bin]]
name = "message-processor"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
dashmap = "6"

# Production Kafka/Redis (uncomment when deploying)
# rdkafka = { version = "0.37", features = ["cmake-build"] }
# redis = { version = "0.27", features = ["tokio-comp"] }
# reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

