[package]
name = "visual-inventory-bbox"
version = "1.0.0"
edition = "2021"
description = "High-performance bounding-box post-processor: NMS, deduplication, confidence re-scoring"

[[bin]]
name = "bbox-processor"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
*** Add File: /home/ubuntu/whatsapp-commerce/services/visual-inventory/rust-bbox/src/main.rs
//! Visual Inventory — Rust Bounding-Box Post-Processor
//!
//! Responsibilities:
//!   1. Non-Maximum Suppression (NMS) — remove overlapping duplicate detections
//!   2. Confidence re-scoring — penalise detections near image edges
//!   3. Deduplication — merge near-identical boxes (same class, IoU > threshold)
//!   4. Spatial clustering — group nearby items of same class for count estimation
//!   5. Return cleaned detection list to Python VLM service
//!
//! Language choice: Rust — zero-cost abstractions, no GC pauses,
//! ideal for tight numerical loops over bounding-box arrays.

use axum::{
    extract::Json,
    http::StatusCode,
    response::IntoResponse,
    routing::{get, post},
    Router,
};
use serde::{Deserialize, Serialize};
use std::net::SocketAddr;
use tower_http::cors::CorsLayer;
use tracing::{info, warn};

// ── Data types ────────────────────────────────────────────────────────────────

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct BoundingBox {
    pub x1: f32,
    pub y1: f32,
    pub x2: f32,
    pub y2: f32,
}

impl BoundingBox {
    pub fn area(&self) -> f32 {
        let w = (self.x2 - self.x1).max(0.0);
        let h = (self.y2 - self.y1).max(0.0);
        w * h
    }

    pub fn iou(&self, other: &BoundingBox) -> f32 {
        let inter_x1 = self.x1.max(other.x1);
        let inter_y1 = self.y1.max(other.y1);
        let inter_x2 = self.x2.min(other.x2);
        let inter_y2 = self.y2.min(other.y2);

        let inter_w = (inter_x2 - inter_x1).max(0.0);
        let inter_h = (inter_y2 - inter_y1).max(0.0);
        let inter_area = inter_w * inter_h;

        if inter_area == 0.0 {
            return 0.0;
        }

        let union_area = self.area() + other.area() - inter_area;
        if union_area <= 0.0 {
            return 0.0;
        }
        inter_area / union_area
    }

    /// Centre point
    pub fn centre(&self) -> (f32, f32) {
        ((self.x1 + self.x2) / 2.0, (self.y1 + self.y2) / 2.0)
    }

    /// Distance from image edge (0 = at edge, 1 = at centre)
    pub fn edge_distance(&self, img_w: f32, img_h: f32) -> f32 {
        let (cx, cy) = self.centre();
        let dx = (cx / img_w - 0.5).abs();
        let dy = (cy / img_h - 0.5).abs();
        1.0 - 2.0 * dx.max(dy)
    }
}

#[derive(Debug, Clone, Serialize, Deserialize)]
pub struct Detection {
    pub label: String,
    pub confidence: f32,
    pub bbox: BoundingBox,
    pub class_id: Option<i32>,
    // Added by post-processor
    #[serde(default)]
    pub adjusted_confidence: Option<f32>,
    #[serde(default)]
    pub cluster_id: Option<usize>,
    #[serde(default)]
    pub suppressed: bool,
}

#[derive(Debug, Deserialize)]
pub struct ProcessRequest {
    pub detections: Vec<Detection>,
    pub image_width: f32,
    pub image_height: f32,
    #[serde(default = "default_nms_threshold")]
    pub nms_threshold: f32,
    #[serde(default = "default_min_confidence")]
    pub min_confidence: f32,
}

fn default_nms_threshold() -> f32 { 0.45 }
fn default_min_confidence() -> f32 { 0.35 }

#[derive(Debug, Serialize)]
pub struct ProcessResponse {
    pub detections: Vec<Detection>,
    pub suppressed_count: usize,
    pub cluster_count: usize,
    pub processed: bool,
    pub processing_us: u64,  // microseconds
}

// ── NMS implementation ────────────────────────────────────────────────────────

/// Non-Maximum Suppression per class.
/// Keeps the highest-confidence detection when IoU > threshold.
pub fn non_maximum_suppression(
    detections: &mut Vec<Detection>,
    iou_threshold: f32,
) -> usize {
    // Sort by confidence descending
    detections.sort_by(|a, b| b.confidence.partial_cmp(&a.confidence).unwrap());

    let n = detections.len();
    let mut suppressed = vec![false; n];
    let mut suppressed_count = 0;

    for i in 0..n {
        if suppressed[i] {
            continue;
        }
        for j in (i + 1)..n {
            if suppressed[j] {
                continue;
            }
            // Only suppress same class
            if detections[i].label != detections[j].label {
                continue;
            }
            let iou = detections[i].bbox.iou(&detections[j].bbox);
            if iou > iou_threshold {
                suppressed[j] = true;
                suppressed_count += 1;
            }
        }
    }

    for (i, det) in detections.iter_mut().enumerate() {
        det.suppressed = suppressed[i];
    }

    suppressed_count
}

/// Re-score confidence based on edge proximity.
/// Items at image edges are likely partially cut off → lower confidence.
pub fn rescore_by_edge_proximity(
    detections: &mut Vec<Detection>,
    img_w: f32,
    img_h: f32,
) {
    for det in detections.iter_mut() {
        if det.suppressed {
            continue;
        }
        let edge_dist = det.bbox.edge_distance(img_w, img_h);
        // Penalty: items in outer 10% of image get up to 15% confidence reduction
        let penalty = if edge_dist < 0.1 { 0.15 } else if edge_dist < 0.2 { 0.07 } else { 0.0 };
        let adjusted = (det.confidence - penalty).max(0.0);
        det.adjusted_confidence = Some((adjusted * 1000.0).round() / 1000.0);
    }
}

/// Spatial clustering: assign cluster IDs to nearby same-class detections.
/// Useful for shelf row counting (items in a row = same cluster).
pub fn spatial_cluster(
    detections: &mut Vec<Detection>,
    img_w: f32,
    img_h: f32,
    proximity_ratio: f32,  // fraction of image dimension = "nearby"
) -> usize {
    let proximity_px = proximity_ratio * img_w.min(img_h);
    let mut cluster_id = 0usize;
    let n = detections.len();

    // Simple union-find via label map
    let mut labels: Vec<Option<usize>> = vec![None; n];

    for i in 0..n {
        if detections[i].suppressed {
            continue;
        }
        if labels[i].is_some() {
            continue;
        }
        labels[i] = Some(cluster_id);
        let (cx_i, cy_i) = detections[i].bbox.centre();

        for j in (i + 1)..n {
            if detections[j].suppressed || detections[j].label != detections[i].label {
                continue;
            }
            let (cx_j, cy_j) = detections[j].bbox.centre();
            let dist = ((cx_i - cx_j).powi(2) + (cy_i - cy_j).powi(2)).sqrt();
            if dist < proximity_px {
                labels[j] = Some(cluster_id);
            }
        }
        cluster_id += 1;
    }

    for (i, det) in detections.iter_mut().enumerate() {
        det.cluster_id = labels[i];
    }

    cluster_id
}

// ── Handlers ──────────────────────────────────────────────────────────────────

async fn health() -> impl IntoResponse {
    Json(serde_json::json!({
        "status": "ok",
        "service": "visual-inventory-bbox-processor",
        "version": "1.0.0"
    }))
}

async fn process_bboxes(
    Json(mut req): Json<ProcessRequest>,
) -> Result<impl IntoResponse, (StatusCode, String)> {
    let start = std::time::Instant::now();

    if req.detections.is_empty() {
        return Ok(Json(ProcessResponse {
            detections: vec![],
            suppressed_count: 0,
            cluster_count: 0,
            processed: true,
            processing_us: start.elapsed().as_micros() as u64,
        }));
    }

    info!(
        "processing {} detections, img={}x{}",
        req.detections.len(),
        req.image_width,
        req.image_height
    );

    // 1. Filter by minimum confidence
    let before_filter = req.detections.len();
    req.detections.retain(|d| d.confidence >= req.min_confidence);
    let filtered = before_filter - req.detections.len();
    if filtered > 0 {
        info!("filtered {} low-confidence detections", filtered);
    }

    // 2. Non-Maximum Suppression
    let suppressed_count = non_maximum_suppression(&mut req.detections, req.nms_threshold);

    // 3. Edge-proximity confidence re-scoring
    rescore_by_edge_proximity(&mut req.detections, req.image_width, req.image_height);

    // 4. Spatial clustering
    let cluster_count = spatial_cluster(&mut req.detections, req.image_width, req.image_height, 0.15);

    // 5. Remove suppressed detections from output
    req.detections.retain(|d| !d.suppressed);

    let elapsed_us = start.elapsed().as_micros() as u64;
    info!(
        "post-processing complete: {} detections, {} suppressed, {} clusters, {}µs",
        req.detections.len(),
        suppressed_count,
        cluster_count,
        elapsed_us
    );

    Ok(Json(ProcessResponse {
        detections: req.detections,
        suppressed_count,
        cluster_count,
        processed: true,
        processing_us: elapsed_us,
    }))
}

// ── Main ──────────────────────────────────────────────────────────────────────

#[tokio::main]
async fn main() {
    tracing_subscriber::fmt()
        .with_env_filter(
            std::env::var("RUST_LOG")
                .unwrap_or_else(|_| "info".to_string()),
        )
        .json()
        .init();

    let port: u16 = std::env::var("PORT")
        .unwrap_or_else(|_| "8082".to_string())
        .parse()
        .unwrap_or(8082);

    let app = Router::new()
        .route("/health", get(health))
        .route("/process", post(process_bboxes))
        .layer(CorsLayer::permissive());

    let addr = SocketAddr::from(([0, 0, 0, 0], port));
    info!("Rust bbox post-processor listening on {}", addr);

    let listener = tokio::net::TcpListener::bind(addr).await.unwrap();
    axum::serve(listener, app).await.unwrap();
}

// ── Tests ─────────────────────────────────────────────────────────────────────

#[cfg(test)]
mod tests {
    use super::*;

    fn make_box(x1: f32, y1: f32, x2: f32, y2: f32) -> BoundingBox {
        BoundingBox { x1, y1, x2, y2 }
    }

    #[test]
    fn test_iou_identical_boxes() {
        let b = make_box(0.0, 0.0, 10.0, 10.0);
        assert!((b.iou(&b) - 1.0).abs() < 1e-5, "IoU of identical boxes should be 1.0");
    }

    #[test]
    fn test_iou_no_overlap() {
        let a = make_box(0.0, 0.0, 5.0, 5.0);
        let b = make_box(10.0, 10.0, 20.0, 20.0);
        assert_eq!(a.iou(&b), 0.0, "Non-overlapping boxes should have IoU 0");
    }

    #[test]
    fn test_iou_partial_overlap() {
        let a = make_box(0.0, 0.0, 10.0, 10.0);
        let b = make_box(5.0, 0.0, 15.0, 10.0);
        // Intersection = 5x10 = 50, Union = 100+100-50 = 150, IoU = 50/150 ≈ 0.333
        let iou = a.iou(&b);
        assert!((iou - 0.333).abs() < 0.01, "Expected IoU ≈ 0.333, got {}", iou);
    }

    #[test]
    fn test_nms_removes_duplicate() {
        let mut dets = vec![
            Detection {
                label: "bottle".to_string(),
                confidence: 0.9,
                bbox: make_box(0.0, 0.0, 10.0, 10.0),
                class_id: Some(0),
                adjusted_confidence: None,
                cluster_id: None,
                suppressed: false,
            },
            Detection {
                label: "bottle".to_string(),
                confidence: 0.7,
                bbox: make_box(1.0, 1.0, 11.0, 11.0), // heavily overlapping
                class_id: Some(0),
                adjusted_confidence: None,
                cluster_id: None,
                suppressed: false,
            },
        ];
        let suppressed = non_maximum_suppression(&mut dets, 0.45);
        assert_eq!(suppressed, 1, "Should suppress 1 duplicate");
        assert!(!dets[0].suppressed, "High-confidence box should survive");
        assert!(dets[1].suppressed, "Low-confidence duplicate should be suppressed");
    }

    #[test]
    fn test_nms_keeps_different_classes() {
        let mut dets = vec![
            Detection {
                label: "bottle".to_string(),
                confidence: 0.9,
                bbox: make_box(0.0, 0.0, 10.0, 10.0),
                class_id: Some(0),
                adjusted_confidence: None,
                cluster_id: None,
                suppressed: false,
            },
            Detection {
                label: "can".to_string(),
                confidence: 0.8,
                bbox: make_box(1.0, 1.0, 11.0, 11.0), // same position, different class
                class_id: Some(1),
                adjusted_confidence: None,
                cluster_id: None,
                suppressed: false,
            },
        ];
        let suppressed = non_maximum_suppression(&mut dets, 0.45);
        assert_eq!(suppressed, 0, "Different classes should not suppress each other");
    }

    #[test]
    fn test_edge_rescore_penalises_edge_items() {
        let mut dets = vec![
            Detection {
                label: "item".to_string(),
                confidence: 0.8,
                bbox: make_box(0.0, 0.0, 5.0, 5.0), // top-left corner
                class_id: None,
                adjusted_confidence: None,
                cluster_id: None,
                suppressed: false,
            },
            Detection {
                label: "item".to_string(),
                confidence: 0.8,
                bbox: make_box(47.5, 47.5, 52.5, 52.5), // dead centre of 100x100
                class_id: None,
                adjusted_confidence: None,
                cluster_id: None,
                suppressed: false,
            },
        ];
        rescore_by_edge_proximity(&mut dets, 100.0, 100.0);
        let edge_conf = dets[0].adjusted_confidence.unwrap();
        let centre_conf = dets[1].adjusted_confidence.unwrap();
        assert!(edge_conf < centre_conf, "Edge item should have lower adjusted confidence");
    }

    #[test]
    fn test_spatial_cluster_groups_nearby() {
        let mut dets = vec![
            Detection {
                label: "bottle".to_string(),
                confidence: 0.9,
                bbox: make_box(10.0, 10.0, 20.0, 20.0),
                class_id: None, adjusted_confidence: None, cluster_id: None, suppressed: false,
            },
            Detection {
                label: "bottle".to_string(),
                confidence: 0.85,
                bbox: make_box(25.0, 10.0, 35.0, 20.0), // close
                class_id: None, adjusted_confidence: None, cluster_id: None, suppressed: false,
            },
            Detection {
                label: "bottle".to_string(),
                confidence: 0.8,
                bbox: make_box(90.0, 90.0, 100.0, 100.0), // far away
                class_id: None, adjusted_confidence: None, cluster_id: None, suppressed: false,
            },
        ];
        let clusters = spatial_cluster(&mut dets, 100.0, 100.0, 0.15);
        assert_eq!(clusters, 2, "Should produce 2 clusters");
        assert_eq!(dets[0].cluster_id, dets[1].cluster_id, "Nearby items should share cluster");
        assert_ne!(dets[0].cluster_id, dets[2].cluster_id, "Far item should be separate cluster");
    }
}
